fixed moving timer and added default 30 second timer to stretches

--- a/app/assets/stylesheets/components/_countdown.scss
+++ b/app/assets/stylesheets/components/_countdown.scss
@@ -2,6 +2,7 @@
   position: relative;
   height: 300px;
   width: 300px;
+  margin: 0 auto;
 }
 
 /* Removes SVG styling that would hide the time label */
@@ -13,7 +14,7 @@
 /* The SVG path that displays the timer's progress */
 .base-timer__path-elapsed {
   stroke-width: 3px;
-  stroke: grey;
+  stroke: rgb(83, 83, 83);
 }
 
 .base-timer__label {
